[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/Objects/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Asset/Objects/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Asset/Tilesheet/enemies.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 48 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 48, 1 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56, 36.4375 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/RESET = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -37.625 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -64 )
texture = ExtResource( 4 )
hframes = 4
vframes = 15
frame = 48
region_enabled = true
region_rect = Rect2( 0, 0, 520, 1950 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="HitBox" parent="." instance=ExtResource( 1 )]
collision_mask = 8

[connection signal="hurt" from="HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="hit" from="HitBox" to="." method="_on_HitBox_hit"]
